<resources>
    <string name="app_name">PROJECT SMART</string>
    <string name="emailid">EmailID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_scanner">Barcode and QR Scanner</string>
    <string name="scan_bar_code">Scan Bar Code</string>
    <string name="validate">Validate</string>
    <string name="image_description">Image Resource</string>
    <string name="capture_bios">Capture BIOS</string>
    <string name="capture_band">Capture ESD Band</string>

    <string name="title_activity_final_page">FinalPageActivity</string>
    <string name="exit">EXIT</string>
    <string name="thank_you">THANK\nYOU</string>
    <string name="prog1">1/3</string>
    <string name="prog2">2/3</string>
    <string name="prog3">3/3</string>
</resources>
