<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EsdBandActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="397dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/capture_esd_band"
        android:layout_width="198dp"
        android:layout_height="54dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/capture_band"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--        android:onClick="openCamera"-->


    <ImageView
        android:id="@+id/esd_band_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/validate"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/login_button_bg"
        android:onClick="onClickValidate"
        android:text="@string/validate"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prog2"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/prog3"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#FFFFFF"
        android:indeterminate="false"
        android:max="3"
        android:progress="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prog2"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/spinner1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--        android:indeterminateTint="@color/colorPrimary"-->


</androidx.constraintlayout.widget.ConstraintLayout>