<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarCodeScannerActivity">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="397dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scan_bar_code"
        android:layout_width="198dp"
        android:layout_height="54dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/scan_bar_code"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <com.journeyapps.barcodescanner.DecoratedBarcodeView-->
    <!--        android:id="@+id/barcode_view"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:layout_marginTop="250dp"-->
    <!--        android:layout_width="200dp"-->
    <!--        android:layout_height="200dp" />-->

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/validate"
        android:layout_width="194dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:background="@drawable/login_button_bg"
        android:onClick="onClickValidate"
        android:text="@string/validate"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prog1"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/prog1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#FFFFFF"
        android:indeterminate="false"
        android:max="3"
        android:progress="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/prog1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_flash"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="200dp"
        android:tint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flash_on" />


</androidx.constraintlayout.widget.ConstraintLayout>